# GDataByGAgents

./: .gitignore  Analisys.ipynb  Main.ipynb  README.md  Retrieval.ipynb  associative_memory.py  embeddings.json  kw_strength.json  memory_stream.ipynb  nodes.json  perceive.py  requirements.txt
src/gbyg/: __init__.py  setup.cfg  time_utils.py
src/gbyg/agent/: __init__.py  agent_constructor.py  environment.json  memory_stream.py  seed_memories.json
src/gbyg/agent/concat/: __init__.py  concat_codelet.py
src/gbyg/agent/memory_input/: __init__.py  block_constructor.py  embedder_codelet.py  embedder_tool.py  importance_scorer_codelet.py  importance_scorer_tool.py
src/gbyg/agent/plan_reaction/: __init__.py  action_codelet.py  action_tool.py  block_constructor.py  entity_inferer_codelet.py  entity_inferer_tool.py  plan_decomposer_tool.py  plan_generator_codelet.py  plan_generator_tool.py
src/gbyg/agent/reflection/: __init__.py  block_constructor.py  insight_gen_codelet.py  insight_gen_tool.py  question_gen_codelet.py  question_gen_tool.py
src/gbyg/agent/retrieval/: __init__.py  recency_scorer_tool.py  relevance_scorer_tool.py  retrieval_codelet.py
src/gbyg/agent/summary/: __init__.py  block_constructor.py  summary_codelet.py  summary_generator_codelet.py  summary_tool.py  summary_trigger_codelet.py
src/gbyg/environment/: environment.py  utils.py
src/gbyg/environment/tools/: __init__.py  action_duration_estimator.py  action_target_selector.py  detect_object_movement.py  movement_action_detector.py  object_mover.py  (+2 more)
src/gbyg/sensors/: __init__.py  sound_sensor.py
(+62 files in other folders)
