[metadata]
name = gbyg
version = 0.1.0
author = EltonCN, Weslley Santos
author_email = elton.nascimento@students.ic.unicamp.br, w193393@dac.unicamp.br
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EltonCN/GDataByGAgents
project_urls =
    Bug Tracker = https://github.com/EltonCN/GDataByGAgents/issues
#    Documentation = 
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research

[options]
include_package_data = True
package_dir =
    = src
packages = find:
#python_requires = 
install_requires =
    numpy
    sentence-transformers
    toolpy
    cst-python


[options.packages.find]
where = src

#[options.extras_require]
